src/snapshots/droid_tui__regression__visual_disabled_circuit_graph_snapshot@disabled_terminal_100.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                    D┌(unnamed)───────────────┐                                   │
└─────────────────────────────────────│────────────────────────│───────────────────────────────────┘
                                      │ ╭button──────────────╮ │
                                      │ │                    │ │
                                      │ │          ┌─────────●───────┐
                                      │ │          │         │ │     │
                                      │ ╰────────────────────╯ │     │
                                      │            │           │     │
                                      └────────────│───────────┘     │
                                                   │                 │
                                                   │                 │
                                                   │                 │
                                                   │                 │
                                                   │                 │
                                                   │                 │
                                                   │                 │
                                                   │                 │
┌Mixer─────────────────────────────────────────────│─────────────────│─────────────────────────────┐
│                                                  │                 │                             │
│                                                  │                 │        ╭contour─────────────╮
│                                                  │                 │        │                    │
│                                                  │                 └┌───────◉                    │
│                                                  │                  │       │                    │
│                                                  │                  │       ╰────────────────────╯
│                                                  │                  │                            │
│                                                  │                  │                            │
│                                                  │                  │                            │
│                                                  │                  │                            │
│                                                  │                  │                            │
│                                        ╭mixer───────────────╮       │                            │
│                                        │         │          │       │                            │
╭clocktool───────────╮         ┌─────────◉─────────┘          ●───────┘                            │
│                    │         │         │                    │                                    │
│                    ●─────────┘         ╰────────────────────╯                                    │
│                    │                                                                             │
╰────────────────────╯                                                                             │
┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Scale: 1.0 | Orientation: Portrait──────────────────────────│
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
