src/snapshots/droid_tui__regression__visual_disabled_circuit_graph_snapshot@disabled_terminal_40.snap
---
source: src/regression.rs
assertion_line: 4694
expression: ansi
---
┌──────────────────────────────────────┐
│      DROID: cable_banner_combos      │
└──────────────────────────────────────┘



┌Mixer─────────────────────────────────┐
│                                      │
│(unnamed)──────────╭contour───────────╮
│                   │    │             │
╭button─────────────◉╮─────┐           │
│                   ││   │ │           │
│                ┌──╰──────────────────╯
│                │   │   │ │           │
╰────────────────────╯   │ │           │
│                │       │ │           │
│────────────────│───────┘ │           │
│                │         │           │
│            ╭mixer───────────────╮    │
│            │   │         │      │    │
│            ◉───┘         └──────●    │
│            │   │                │    │
│            ╰────────────────────╯    │
│                │                     │
│                │                     │
│                │                     │
│╭clocktool───────────╮                │
││               │    │                │
││               └────●                │
││                    │                │
│╰────────────────────╯                │
│                                      │
└──────────────────────────────────────┘




┌──────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | │
└──────────────────────────────────────┘
