src/snapshots/droid_tui__regression__visual_fader_column_snapshot@fader_column_classic_120_0.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                  DROID: fader_column                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌────┐┌─────────┐┐
│ P8S…  M4 2    ││
▯○○○○○│▯ ▯  ▯ ▯ ││
▯▯▯▯▯▯│▯ ▯  ▯ ▯ ││
▯▯▯▯▯▯│▯ ▯  ▯ ▯ ││
▯▯▯▯▯▯│▯ ▯  ▯ ▯ ││
▯▯▯▯▯▯│▯ ▯  ▯ ▯ ││
▯▯▯▯▯▯│▯ ▯  ▯ ▯ ││
▯▯▯▯▯▯│▯ ▯  ▯ ▯ ││
│    ││▯ ▯  ▯ ▯ ││
│    ││▯ ▯  ▯ ▯ ││
□□□□□□│▯ ▯  ▯ ▯ ││
………………│▯ ▯  ▯ ▯ ││
│    ││▯ ▯  ▯ ▯ ││
│    ││▯ ▯  ▯ ▯ ││
│    ││▯ ▯  ▯ ▯ ││
│    ││▯ ▯  ▯ ▯ ││
│    ││▯ ▯  ▯ ▯ ││
│    ││▯ ▯  ▯ ▯ ││
│    ││▯ ▯  ▯ ▯ ││
│    ││▯ ▯  ▯ ▯ ││
│    ││         ││
│    ││         ││
│    ││○ ○  ○ ○ ││
│    ││O…O… O…O…││
│    ││         ││
│    ││         ││
│    ││         ││
│    ││         ││
│    ││         ││
│    ││○ ○  ○ ○ ││
│    ││         ││
│    ││         ││
│    ││         ││
│    ││         ││
└────┘└─────────┘┘
















































┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Loaded fader_column | Renders degraded at 120 cols — use ≥ 516 cols or reduce scale | Scale: 1.0 | Orientation: Portra│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
