src/snapshots/droid_tui__regression__visual_fader_column_snapshot@fader_column_classic_zoom0.75.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                  DROID: fader_column                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌───┐┌──────┐
○○○○○▯ ▯4▯2▯│
▯▯▯▯▯▯ ▯ ▯ ▯│
▮▯▯▯▯▯ ▯ ▯ ▯│
▮▯▯▯▯▯ ▯ ▯ ▯│
▮▯▯▯▯▯ ▯ ▯ ▯│
│   │▯ ▯ ▯ ▯│
│   │▯ ▯ ▯ ▯│
□□□□□▮ ▯ ▯ ▯│
……………▮ ▯ ▯ ▯│
│   │▮ ▯ ▯ ▯│
│   │▮ ▯ ▯ ▯│
│   │▮ ▯ ▯ ▯│
│   │▮ ▯ ▯ ▯│
│   │▮ ▯ ▯ ▯│
│   ││      │
│   ││      │
│   │○ ○ ○ ○│
│   │… … … …│
│   ││      │
│   ││      │
│   ││      │
│   │○ ○ ○ ○│
│   ││      │
│   ││      │
└───┘└──────┘


























































┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 120 cols — use ≥ 516 cols or reduce scale | Scale: 0.8 | Ori│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
