src/snapshots/droid_tui__regression__visual_fader_column_snapshot@fader_column_classic_zoom1.5.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                  DROID: fader_column                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌───────┐┌──────────────┐┐
│ P8S8 1 │ M4 2         ││
│       ││              ││
│       ││              ││
│▯▯▯▯▯▯▯││▯…  ▯… ▯…  ▯… ││
│○○○○○○○○│▯…  ▯… ▯…  ▯… ││
│▯▯▯▯▯▯▯││▯   ▯  ▯   ▯  ││
│▯▯▯▯▯▯▯││▯   ▯  ▯   ▯  ││
│▯▯▯▯▯▯▯││▯   ▯  ▯   ▯  ││
│▮▯▯▯▯▯▯││▯   ▯  ▯   ▯  ││
│▮▯▯▯▯▯▯││▯   ▯  ▯   ▯  ││
│▮▯▯▯▯▯▯││▯   ▯  ▯   ▯  ││
│▮▯▯▯▯▯▯││▯   ▯  ▯   ▯  ││
│▮▯▯▯▯▯▯││▯   ▯  ▯   ▯  ││
│       ││▯   ▯  ▯   ▯  ││
│       ││▯   ▯  ▯   ▯  ││
│       ││▯   ▯  ▯   ▯  ││
│       ││▯   ▯  ▯   ▯  ││
│       ││▮   ▯  ▯   ▯  ││
│□□□□□□□││▮   ▯  ▯   ▯  ││
│…………………││▮   ▯  ▯   ▯  ││
│       ││▮   ▯  ▯   ▯  ││
│       ││▮   ▯  ▯   ▯  ││
│       ││▮   ▯  ▯   ▯  ││
│       ││▮   ▯  ▯   ▯  ││
│       ││▮   ▯  ▯   ▯  ││
│       ││▮   ▯  ▯   ▯  ││
│       ││▮   ▯  ▯   ▯  ││
│       ││▮   ▯  ▯   ▯  ││
│       ││▮   ▯  ▯   ▯  ││
│       ││▮   ▯  ▯   ▯  ││
│       ││▮   ▯  ▯   ▯  ││
│       ││              ││
│       ││              ││
│       ││              ││
│       ││              ││
│       ││              ││
│       ││○ … ○ …○ … ○ …││
│       ││OFF OFFOFF OFF││
│       ││              ││
│       ││              ││
│       ││              ││
│       ││              ││
│       ││              ││
│       ││              ││
│       ││              ││
│       ││              ││
│       ││○   ○  ○   ○  ││
│       ││              ││
│       ││              ││
│       ││              ││
│       ││              ││
│       ││              ││
│       ││              ││
└───────┘└──────────────┘┘





























┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 120 cols — use ≥ 580 cols or reduce scale | Scale: 1.5 | Ori│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
