src/snapshots/droid_tui__regression__visual_fader_column_snapshot@fader_column_classic_zoom2.snap
---
source: src/regression.rs
expression: ansi
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                  DROID: fader_column                                                 │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌──────────┐┌────────────────────┐┐
│ P8S8 1   ││ M4 2               ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│○○▯○○○▯○○○││▯…   ▯…   ▯…   ▯…   ││
│▯▯▯ ▯▯▯ ▯▯││▯…   ▯…   ▯…   ▯…   ││
│▯▯▯ ▯▯▯ ▯▯││▯    ▯    ▯    ▯    ││
│▯▯▯ ▯▯▯ ▯▯││▯    ▯    ▯    ▯    ││
│▯▯▯ ▯▯▯ ▯▯││▯    ▯    ▯    ▯    ││
│▯▯▯ ▯▯▯ ▯▯││▯    ▯    ▯    ▯    ││
│▮▯▯ ▯▯▯ ▯▯││▯    ▯    ▯    ▯    ││
│▮▯▯ ▯▯▯ ▯▯││▯    ▯    ▯    ▯    ││
│▮▯▯ ▯▯▯ ▯▯││▯    ▯    ▯    ▯    ││
│▮▯▯ ▯▯▯ ▯▯││▯    ▯    ▯    ▯    ││
│▮▯▯ ▯▯▯ ▯▯││▯    ▯    ▯    ▯    ││
│▮▯▯ ▯▯▯ ▯▯││▯    ▯    ▯    ▯    ││
│▮▯▯ ▯▯▯ ▯▯││▯    ▯    ▯    ▯    ││
│          ││▯    ▯    ▯    ▯    ││
│          ││▯    ▯    ▯    ▯    ││
│          ││▯    ▯    ▯    ▯    ││
│          ││▯    ▯    ▯    ▯    ││
│          ││▯    ▯    ▯    ▯    ││
│          ││▮    ▯    ▯    ▯    ││
│□□□ □□□ □□││▮    ▯    ▯    ▯    ││
│OOO…OOO…OO…│▮    ▯    ▯    ▯    ││
│          ││▮    ▯    ▯    ▯    ││
│          ││▮    ▯    ▯    ▯    ││
│          ││▮    ▯    ▯    ▯    ││
│          ││▮    ▯    ▯    ▯    ││
│          ││▮    ▯    ▯    ▯    ││
│          ││▮    ▯    ▯    ▯    ││
│          ││▮    ▯    ▯    ▯    ││
│          ││▮    ▯    ▯    ▯    ││
│          ││▮    ▯    ▯    ▯    ││
│          ││▮    ▯    ▯    ▯    ││
│          ││▮    ▯    ▯    ▯    ││
│          ││▮    ▯    ▯    ▯    ││
│          ││▮    ▯    ▯    ▯    ││
│          ││▮    ▯    ▯    ▯    ││
│          ││▮    ▯    ▯    ▯    ││
│          ││▮    ▯    ▯    ▯    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││○ B… ○ B… ○ B… ○ B… ││
│          ││OFF  OFF  OFF  OFF  ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││○    ○    ○    ○    ││
│          ││…    …    …    …    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
│          ││                    ││
└──────────┘└────────────────────┘┘










┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│No patch loaded. Press 'l' to load. | Renders degraded at 120 cols — use ≥ 580 cols or reduce scale | Scale: 2.0 | Ori│
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
